--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0px;
 }
@@ -12,8 +11,8 @@
 
     display: flex;
     flex-direction: row;
-    gap: 40px;
     align-items: center;
+    gap: 40px;
 }
 
 .smallBox-photo img {
@@ -49,7 +48,7 @@
 
     display: flex;
     flex-direction: row;
-    justify-content: end;
+    justify-content: flex-end;
 
     overflow: hidden;
 
